--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,16 @@ spring.application.name=green-lit-engine
 server.port=8101
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/green_lit_engine?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=admin
+spring.datasource.password=10180719
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=2000
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=60000
+
 
 # JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
