--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-cache</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         
         <!-- Database -->
@@ -64,18 +64,6 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        
-        <!-- Droid -->
-        <dependency>
-            <groupId>com.droid</groupId>
-            <artifactId>droid-core</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.droid</groupId>
-            <artifactId>droid-spring-boot-starter</artifactId>
-            <version>1.0.0</version>
         </dependency>
         
         <!-- JWT -->
@@ -120,6 +108,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.1.1</version>
         </dependency>
     </dependencies>
 
