--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
             <artifactId>jedis</artifactId>
             <version>5.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
