--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,12 +41,12 @@ sms.verification.expiration=60
 
 
 # Redis Configuration
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.database=0
-spring.redis.timeout=2000
-spring.redis.jedis.pool.max-active=8
-spring.redis.jedis.pool.max-idle=8
-spring.redis.jedis.pool.min-idle=0
-spring.redis.jedis.pool.max-wait=-1
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+#spring.data.redis.password=
+#spring.data.redis.database=0
+spring.data.redis.timeout=2000
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
+spring.data.redis.jedis.pool.max-wait=-1
