feat(auth): 完善短信验证码功能并优化用户注册流程
- 新增短信服务集成，实现短信验证码发送功能
- 优化用户注册逻辑，增加验证码验证和用户存在性检查
- 修改用户信息相关代码，将 LocalDateTime 替换为 Date
- 新增用户已存在和验证码错误等异常处理- 重构部分代码结构，提高可维护性

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,14 @@ jwt.expiration=86400000
 # SMS verification code timeout in seconds
 sms.verification.expiration=60
 
+# 短信服务配置
+sms.code.expire-minutes=5
+
+# 阿里云短信服务配置
+aliyun.sms.access-key-id=your-access-key-id
+aliyun.sms.access-key-secret=your-access-key-secret
+aliyun.sms.sign-name=your-sign-name
+aliyun.sms.template-code=your-template-code
 
 # Redis Configuration
 spring.data.redis.host=localhost
