feat(interview): 实现面试创建、问答和结束功能
- 新增面试相关数据结构和接口定义
- 实现面试创建、问答和结束的核心逻辑
- 添加面试详情和列表查询功能
-优化数据库操作和异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <mybatis-generator-core.version>1.4.1</mybatis-generator-core.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <mybatis-generator-maven-plugin.version>1.4.1</mybatis-generator-maven-plugin.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <fastjson.version>2.0.32</fastjson.version>
+
     </properties>
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -135,6 +138,26 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java.version}</version>
+        </dependency>
+
+        <!-- MapStruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <!-- FastJSON -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
 
