--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,11 +39,9 @@ jwt.expiration=864000000
 # SMS verification code timeout in seconds
 sms.verification.expiration=60
 
-
-aliyun.sms.access-key-id=your-access-key-id
-aliyun.sms.access-key-secret=your-access-key-secret
-aliyun.sms.sign-name=your-sign-name
-aliyun.sms.template-code=your-template-code
+# Aliyun SMS Configuration
+aliyun.sms.template-code=SMS_154950909
+aliyun.sms.endpoint=dysmsapi.aliyuncs.com
 
 # Redis Configuration
 spring.data.redis.host=localhost
