feat(engine): 添加 STT 使用记录功能并优化面试相关逻辑
- 新增记录 STT 使用情况的接口和相关逻辑
- 重构面试详情和列表的响应结构，增加新的字段信息
- 优化面试结束和自动结束的处理逻辑
- 新增 UsageRecord 相关的 mapper 和 model
- 修改部分现有接口以适应新的业务需求

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,13 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <!-- 请将 'the-latest-version' 替换为最新版本号：https://mvnrepository.com/artifact/com.aliyun/dysmsapi20170525 -->
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
