refactor: 更新 Aliyun SMS配置
- 移除示例配置中的 access key、sign name 等敏感信息
- 添加正确的 template-code 和 endpoint
-为 Aliyun SMS 配置添加注释说明

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,11 +39,11 @@ jwt.expiration=864000000
 # SMS verification code timeout in seconds
 sms.verification.expiration=60
 
-
-aliyun.sms.access-key-id=your-access-key-id
-aliyun.sms.access-key-secret=your-access-key-secret
-aliyun.sms.sign-name=your-sign-name
-aliyun.sms.template-code=your-template-code
+# Aliyun SMS Configuration
+aliyun.sms.access-key-id=
+aliyun.sms.access-key-secret=
+aliyun.sms.template-code=
+aliyun.sms.endpoint=dysmsapi.aliyuncs.com
 
 # Redis Configuration
 spring.data.redis.host=localhost
