build(pom): 添加 Guava依赖并更新版本
- 在 properties 中添加 guava.version 属性，值为 33.4.8-jre
- 在 dependencies 中添加 Guava 依赖

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
         <dysmsapi20170525.version>3.1.2</dysmsapi20170525.version>
         <credentials-java.version>1.0.2</credentials-java.version>
+        <guava.version>33.4.8-jre</guava.version>
     </properties>
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -178,6 +179,12 @@
             <groupId>com.aliyun</groupId>
             <artifactId>credentials-java</artifactId>
             <version>${credentials-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
