--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,9 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+            <scope>compile</scope>
         </dependency>
+        
     </dependencies>
 
     <build>
