--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=green-lit-engine
 
 # Server configuration
 server.port=8080
+server.address=0.0.0.0
 
 # Database configuration
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
