ci: 修改数据库用户名
-将数据库用户名从 'root' 修改为 'green_lit'，以增强系统安全性

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.address=0.0.0.0
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
+spring.datasource.username=green_lit
 spring.datasource.password=test1234
 
 # Druid connection pool configuration
