--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <dysmsapi20170525.version>3.1.2</dysmsapi20170525.version>
         <credentials-java.version>1.0.2</credentials-java.version>
         <guava.version>32.1.3-jre</guava.version>
+        <log4j.version>2.22.1</log4j.version>
     </properties>
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -204,6 +205,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
