--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,11 @@ spring.data.redis.jedis.pool.max-active=8
 spring.data.redis.jedis.pool.max-idle=8
 spring.data.redis.jedis.pool.min-idle=0
 spring.data.redis.jedis.pool.max-wait=-1
+#
+sharding.jdbc.config.data-source.mysql.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+sharding.jdbc.config.data-source.mysql.username=root
+sharding.jdbc.config.data-source.mysql.password=10180719
+sharding.jdbc.config.data-source.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+sharding.jdbc.config.data-source.rules.sharding.tables.account.actual-data-nodes=mysql.account_${0..9}
+sharding.jdbc.config.data-source.rules.sharding.tables.account.table-strategy.inline.sharding-column: user_id
+sharding.jdbc.config.data-source.rules.sharding.tables.account.table-strategy.inline.algorithm-expression: account_${user_id % 10}
