--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,11 +50,39 @@ spring.data.redis.jedis.pool.max-active=8
 spring.data.redis.jedis.pool.max-idle=8
 spring.data.redis.jedis.pool.min-idle=0
 spring.data.redis.jedis.pool.max-wait=-1
+
+spring.main.allow-bean-definition-overriding=true
+spring.shardingsphere.props.sql-show=true
+
+# ??
+spring.shardingsphere.datasource.name=m0
+
+spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.m0.username=root
+spring.shardingsphere.datasource.m0.password=10180719
+
+# ???????long???id
+spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
+spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-id=1
 #
-sharding.jdbc.config.data-source.mysql.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-sharding.jdbc.config.data-source.mysql.username=root
-sharding.jdbc.config.data-source.mysql.password=10180719
-sharding.jdbc.config.data-source.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
-sharding.jdbc.config.data-source.rules.sharding.tables.account.actual-data-nodes=mysql.account_${0..9}
-sharding.jdbc.config.data-source.rules.sharding.tables.account.table-strategy.inline.sharding-column: user_id
-sharding.jdbc.config.data-source.rules.sharding.tables.account.table-strategy.inline.algorithm-expression: account_${user_id % 10}
+spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.column=user_id
+spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.key-generator-name=alg_snowflake
+# ????????
+spring.shardingsphere.rules.sharding.tables.account.actual-data-nodes=m0.account->{0..9}
+
+spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=id
+spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-algorithm-name=account_db_alg
+
+spring.shardingsphere.rules.sharding.sharding-algorithms.account_db_alg.type=MOD
+spring.shardingsphere.rules.sharding.sharding-algorithms.account_db_alg.props.sharding-count=10
+
+# ?account????????standard??????????????
+spring.shardingsphere.rules.sharding.tables.account.table-strategy.complex.sharding-columns=user_id
+spring.shardingsphere.rules.sharding.tables.account.table-strategy.complex.sharding-algorithm-name=account_tbl_alg
+
+# ??????
+spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.type=CLASS_BASED
+spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.strategy=COMPLEX
+spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.algorithmClassName=com.keji.green.lit.engine.sharding.AccountAlgorithm
