--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port=8080
 server.address=0.0.0.0
 
 # Database configuration
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=10180719
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=test1234
 
 # Druid connection pool configuration
 spring.datasource.druid.initial-size=5
@@ -59,7 +59,7 @@ spring.shardingsphere.datasource.name=m0
 
 spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
 spring.shardingsphere.datasource.m0.username=root
 spring.shardingsphere.datasource.m0.password=10180719
 
