--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,7 +61,7 @@ spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
 spring.shardingsphere.datasource.m0.username=root
-spring.shardingsphere.datasource.m0.password=10180719
+spring.shardingsphere.datasource.m0.password=test1234
 
 # ???????long???id
 spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
@@ -70,7 +70,7 @@ spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.worker-i
 spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.column=user_id
 spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.key-generator-name=alg_snowflake
 # ????????
-spring.shardingsphere.rules.sharding.tables.account.actual-data-nodes=m0.account->{0..9}
+spring.shardingsphere.rules.sharding.tables.account.actual-data-nodes=m0.account$->{0..9}
 
 spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=id
 spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-algorithm-name=account_db_alg
