--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,11 @@ spring.shardingsphere.rules.sharding.tables.account.table-strategy.complex.shard
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.type=CLASS_BASED
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.strategy=COMPLEX
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.algorithmClassName=com.keji.green.lit.engine.sharding.AccountAlgorithm
+
+
+#spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
+#spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=m0
+#
+#
+#spring.shardingsphere.sharding.tables.account.database-strategy.inline.sharding-column=user_id
+#spring.shardingsphere.sharding.tables.account.database-strategy.inline.algorithm-expression=m0
