--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -88,9 +88,9 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.s
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.algorithmClassName=com.keji.green.lit.engine.sharding.AccountAlgorithm
 
 
-spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
-spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=m0
-
-
-spring.shardingsphere.sharding.tables.account.database-strategy.inline.sharding-column=user_id
-spring.shardingsphere.sharding.tables.account.database-strategy.inline.algorithm-expression=m0
+#spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
+#spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=m0
+#
+#
+#spring.shardingsphere.sharding.tables.account.database-strategy.inline.sharding-column=user_id
+#spring.shardingsphere.sharding.tables.account.database-strategy.inline.algorithm-expression=m0
