--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.shardingsphere.props.sql-show=true
 
 # ??
-spring.shardingsphere.datasource.name=m0
+spring.shardingsphere.datasource.names=m0
 
 spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -87,10 +87,10 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.type=CL
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.strategy=COMPLEX
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.algorithmClassName=com.keji.green.lit.engine.sharding.AccountAlgorithm
 
-
+#
 #spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
 #spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=m0
-#
-#
+##
+##
 #spring.shardingsphere.sharding.tables.account.database-strategy.inline.sharding-column=user_id
 #spring.shardingsphere.sharding.tables.account.database-strategy.inline.algorithm-expression=m0
