--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,8 +59,8 @@ spring.shardingsphere.datasource.names=m0
 
 spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
-spring.shardingsphere.datasource.m0.username=root
+spring.shardingsphere.datasource.m0.url=jdbc:mysql://47.122.94.215:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
+spring.shardingsphere.datasource.m0.username=green_lit
 spring.shardingsphere.datasource.m0.password=test1234
 
 # ???????long???id
@@ -72,7 +72,7 @@ spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.key-ge
 # ????????
 spring.shardingsphere.rules.sharding.tables.account.actual-data-nodes=m0.account$->{0..9}
 
-spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=id
+spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=user_id
 spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-algorithm-name=account_db_alg
 
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_db_alg.type=MOD
