--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,7 +72,7 @@ spring.shardingsphere.rules.sharding.tables.account.key-generate-strategy.key-ge
 # ????????
 spring.shardingsphere.rules.sharding.tables.account.actual-data-nodes=m0.account$->{0..9}
 
-spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=id
+spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-column=user_id
 spring.shardingsphere.rules.sharding.tables.account.database-strategy.standard.sharding-algorithm-name=account_db_alg
 
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_db_alg.type=MOD
