--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,12 +55,12 @@ spring.main.allow-bean-definition-overriding=true
 spring.shardingsphere.props.sql-show=true
 
 # ??
-spring.shardingsphere.datasource.names=m0
+spring.shardingsphere.datasource.name=m0
 
 spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.m0.url=jdbc:mysql://47.122.94.215:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
-spring.shardingsphere.datasource.m0.username=green_lit
+spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/green_lit?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8
+spring.shardingsphere.datasource.m0.username=root
 spring.shardingsphere.datasource.m0.password=test1234
 
 # ???????long???id
