--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,18 @@ spring.shardingsphere.rules.sharding.tables.account.table-strategy.complex.shard
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.type=CLASS_BASED
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.strategy=COMPLEX
 spring.shardingsphere.rules.sharding.sharding-algorithms.account_tbl_alg.props.algorithmClassName=com.keji.green.lit.engine.sharding.AccountAlgorithm
+
+#
+spring.shardingsphere.rules.sharding.tables.account_log.key-generate-strategy.column=user_id
+spring.shardingsphere.rules.sharding.tables.account_log.key-generate-strategy.key-generator-name=alg_snowflake
+# ????????
+spring.shardingsphere.rules.sharding.tables.account_log.actual-data-nodes=m0.account_log$->{0..9}
+
+spring.shardingsphere.rules.sharding.tables.account_log.database-strategy.standard.sharding-column=user_id
+spring.shardingsphere.rules.sharding.tables.account_log.database-strategy.standard.sharding-algorithm-name=account_db_alg
+
+spring.shardingsphere.rules.sharding.tables.account_log.table-strategy.complex.sharding-columns=user_id
+spring.shardingsphere.rules.sharding.tables.account_log.table-strategy.complex.sharding-algorithm-name=account_tbl_alg
+
+
+
