--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <credentials-java.version>1.0.2</credentials-java.version>
         <guava.version>32.1.3-jre</guava.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <hutool-core.version>5.8.30</hutool-core.version>
     </properties>
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -193,6 +194,12 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>${hutool-core.version}</version>
         </dependency>
 
 
