--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.16</version>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.0.52.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
