--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,7 @@ spring.data.redis.jedis.pool.max-active=8
 spring.data.redis.jedis.pool.max-idle=8
 spring.data.redis.jedis.pool.min-idle=0
 spring.data.redis.jedis.pool.max-wait=-1
+
+
+# LLM Configuration
+llm.base-url=http://47.122.94.215:8100/llm
