--- a/src/main/resources/alipay_config.properties
+++ b/src/main/resources/alipay_config.properties
@@ -16,7 +16,7 @@ seller_id=2088721067701212
 
 https_verify_url=https\://mapi.alipay.com/gateway.do?service\=notify_verify&
 
-notify_url=http://greenlitengine/scanPayNotify/notify/ALIPAY
+notify_url=http://127.0.0.1:8080/api/pay/notify/ALIPAY
 
 return_url=http://greenlitengine/scanPayNotify/result/ALIPAY
 
